feat: simple token generation
